# blockamok-remix2

./: CMakeLists.txt  CMakePresets.json  COMPATIBILITY.md  README.md
.github/workflows/: build.yml
src/: audio.c  audio.h  config.c  main.c  text.c  text_options.c
web/: index.html
